--- a/css/style.scss
+++ b/css/style.scss
@@ -321,102 +321,86 @@
 
 
 
-@media (max-width: 1366px) {
- .container{
-   width: 100%;
- }
- .sec-1{
-   display: flex;
-  .content {
-    width: 345px;
-    margin-right: 60px;
-    h3 {
-      font-size: 27px;
-      line-height: 50px;
-      padding: 0;
-    }
 
-    p {
-      font-size: 15px;
-      line-height: 30px;
-      
-    }
-    a {
-      font-size: 28px;
-      
-    }
-  }
-   .image{
-      position: relative;
-      width: 400px;
-      height: 400px;
-      background-repeat: no-repeat;
-      background-size: cover;
-      text-align: center;
-      margin-top: 5rem;
-      .img1 {
-        position: absolute;
-        top: 0%;
-        left: 0%;
-        z-index: 200;
-        background: none;
-        transform: translate(15%, -20%);
-
-      }
-   }
- }
- .sec-2{
-  .form{
-    width: 500px;
-    margin: 50px 0;
-    margin-left: 60px;
-
-    .title {
-      padding: 16px 40px;
-      h2{
-        font-size: 27px;
-        line-height: 35px;
-      }
-    }
-    .content-form{
-      padding: 20px;
-
-      .form-control {
-        
-        
-        
-        input{
-            width: 100%;
-        }
-        
-    }
-    button{
-        padding: 16px 0;
-        width: 100%;
-    }
-    }
-  }
-  .image{
-    width: 450px;
-    height: 850px;
-
-    .img1{
-      width: 700px;
-      transform: translate(-30%, 30%);
-    }
-  }
- }
- .sec-3{
-   width: 100%;
-   img{
-     width: 100%;
-   }
- }
-}
-
-@media (max-width: 1024px ) {
+@media (max-width: 1024px) {
   .container{
     width: 100%;
+  }
+  .sec-1{
+   .content {
+     width: 320px;
+     margin-right: 60px;
+     h3 {
+      font-size: 25px;
+      line-height: 42px;
+       padding: 0;
+     }
+ 
+     p {
+       font-size: 14px;
+       line-height: 20px;
+       
+     }
+     a {
+       font-size: 28px;
+       
+     }
+   }
+    .image{
+       width: 360px;
+       height: 360px;
+       
+       .img1 {
+         position: absolute;
+         top: 0%;
+         left: 0%;
+         z-index: 200;
+         background: none;
+         transform: translate(15%, -20%);
+ 
+       }
+    }
+  }
+  .sec-2{
+   .form{
+     width: 500px;
+     margin: 50px 0;
+     margin-left: 60px;
+ 
+     .title {
+       padding: 16px 40px;
+       h2{
+         font-size: 27px;
+         line-height: 35px;
+       }
+     }
+     .content-form{
+       padding: 20px;
+ 
+       .form-control {
+         
+         
+         
+         input{
+             width: 100%;
+         }
+         
+     }
+     button{
+         padding: 16px 0;
+         width: 100%;
+     }
+     }
+   }
+   .image{
+     width: 450px;
+     height: 850px;
+ 
+     .img1{
+       width: 700px;
+       transform: translate(-30%, 30%);
+     }
+   }
   }
   .sec-3{
     width: 100%;
@@ -424,9 +408,103 @@
       width: 100%;
     }
   }
-}
+ }
 
-@media (max-width: 768px ) {
+ @media (max-width: 768px) {
+  .container{
+    width: 100%;
+  }
+  .sec-1{
+   .content {
+     width: 240px;
+     margin-right: 10px;
+     h3 {
+      font-size: 18px;
+      line-height: 20px;
+     }
+ 
+     p {
+       font-size: 10px;
+       line-height: 20px;
+       
+     }
+     a {
+       font-size: 20px;
+       
+     }
+   }
+    .image{
+       width: 280px;
+       height: 300px;
+       
+       .img1 {
+         width: 300px;
+         transform: translate(0%, -20%);
+ 
+       }
+    }
+  }
+  .sec-2{
+   .form{
+     width: 400px;
+     margin: 20px 0;
+     margin-left: 30px;
+ 
+     .title {
+       padding: 16px 10px;
+       h2{
+         font-size: 23px;
+         line-height: 35px;
+       }
+     }
+     .content-form{
+       padding: 20px;
+ 
+       .form-control {
+         input{
+             width: 100%;
+             height: 40px;
+             padding: 10px;
+         }
+         .check-box {
+           .check{
+             input[type="radio"] {
+              width: 20px;
+              height: 20px;
+              margin-right: 0;
+             }
+             label{
+              font-size: 20px;
+             }
+           }
+         }
+         
+     }
+     button{
+         padding: 16px 0;
+         width: 100%;
+     }
+     }
+   }
+   .image{
+    width: 340px;
+    height: 744px;
+ 
+     .img1{
+       width: 600px;
+       transform: translate(-30%, 30%);
+     }
+   }
+  }
+  .sec-3{
+    width: 100%;
+    img{
+      width: 100%;
+    }
+  }
+ }
+
+@media (max-width: 600px ) {
   .container{
     width: 100%;
   }
